# speki-tui

./: Cargo.toml
src/: backend.rs  frontend.rs  main.rs
src/pages/: addcards.rs  mod.rs  reviewcards.rs  viewcards.rs
