[package]
name = "speki-tui"
version = "0.1.0"
edition = "2021"
description = "tui version of speki"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rasciigraph = "0.2.0"
ascii_tree = "0.1.1"
speki-backend = { path = "../speki-backend", version="0.1.1"}
rand = "0.8.5"
